# wasm-cmake

./: .clang-format  CMakeLists.txt  README.md
exe/: main.cpp
export/: calc_engine.cpp
include/wasm_cmake/: core.h
src/: core.cpp
